--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/fonts.scss",
               "src/styles.scss"
             ],
             "scripts": []
